| Summary: | ASTERISK-20241: alignment of MD5Context in buffer not enforced (theoretical issue only) | ||
| Reporter: | Walter Doekes (wdoekes) | Labels: | |
| Date Opened: | 2012-08-16 08:51:36 | Date Closed: | 2012-08-29 17:48:07 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | General |
| Versions: | 1.8.15.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) tmp.diff | |
| Description: | Hi, the struct MD5Context character buffer is cast to an int32_t* without making sure that said buffer is aligned. Since the buffer follows two uint32_t's, the chance of 'in' being (32 bits) unaligned is nil in practice. But adding code to ensure that 'in' stays aligned costs nothing and removes all doubts about the casts being safe. Regards, Walter | ||
| Comments: | By: Richard Mudgett (rmudgett) 2012-08-29 17:48:37.561-0500 Only committing this to trunk. | ||